# EFileOps

./: .gitattributes  .gitignore  CMakeLists.txt  EFileOps.rc  LICENSE  Main.cpp  PRIVACY_POLICY.md  README.md  README_CN.md
EQtUI/: EUITheme.qml  qmldir
EQtUI/advanced/: EAccordion.qml  EPopupMenu.qml
EQtUI/basic/: EAvatar.qml  EButton.qml  EIconButton.qml  EPillButton.qml  ETag.qml
EQtUI/feedback/: EDialog.qml  EProgressBar.qml  EStatusBar.qml  EToast.qml
EQtUI/form/: ECheckbox.qml  EDropdown.qml  ESlider.qml  ESwitch.qml  ETextField.qml
EQtUI/layout/: ECard.qml  EGrid.qml  EHStack.qml  EScrollView.qml  ESpacer.qml  EVStack.qml
EQtUI/navigation/: EListItem.qml  ESidebar.qml  EToolbar.qml
doc/: DESIGN_EN.md  DESIGN_ZH.md
qml/: AboutDialog.qml  I18n.qml  Main.qml  RuleConfigDialog.qml  RuleConfigManagerDialog.qml  SettingsDialog.qml  qmldir
qml/CenterPanel/: CenterPanel.qml  CenterToolbar.qml  EmptyState.qml  FileDropArea.qml  FileListHeader.qml  FileListItem.qml  FileListPagination.qml  qmldir
qml/LeftPanel/: LeftBottomButtons.qml  LeftPanel.qml  LeftStatusPanel.qml  qmldir
qml/RightPanel/: RightAddRuleButton.qml  RightConfigButtons.qml  RightPanel.qml  RightRuleList.qml  qmldir
qml/rules/: AddRuleConfig.qml  DateTimeRuleConfig.qml  FormatRuleConfig.qml  NumberingRuleConfig.qml  RemoveRuleConfig.qml  ReplaceRuleConfig.qml  RuleTypeCard.qml  RuleTypeSelector.qml  qmldir
src/controller/: MainController.cpp  MainController.h
src/core/: AppSettings.cpp  AppSettings.h  BaseRequest.h  BaseResponse.h  ErrorCodes.h
src/model/: FileItem.cpp  FileItem.h  FileListModel.cpp  FileListModel.h
src/rule/: RuleBase.cpp  RuleBase.h
src/rule/rules/: AddPrefixRule.cpp  AddPrefixRule.h  AddSuffixRule.cpp  AddSuffixRule.h  CaseTransformRule.cpp  CaseTransformRule.h  DateTimeRule.cpp  DateTimeRule.h  NumberingRule.cpp  NumberingRule.h  RemoveRule.cpp  RemoveRule.h  ReplaceRule.cpp  ReplaceRule.h
src/service/: FileService.cpp  FileService.h  RuleEngine.cpp  RuleEngine.h
src/translation/: TranslationManager.cpp  TranslationManager.h
src/util/: FileSystemHelper.cpp  FileSystemHelper.h  SimpleLog.h
translations/: fileops_de_DE.ts  fileops_en_US.qm  fileops_en_US.ts  fileops_zh_CN.qm  fileops_zh_CN.ts
